# Python-Anything

./: .gitignore  Python.code-profile  README.md  main.py  pyproject.toml
Crawler/: test.py
Learn/: test01.py  test_file.py
Notes/: git.md  python.md  uv.md
Notes/old file/: UV.md  前言.md
Numpy/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  question.ipynb
Pandas/: 01-series.ipynb  02-series-question.ipynb  03-dataframe.ipynb  04-dataframe-question.ipynb  05-DataAnalysis.ipynb
PythonBasis/: 01-Basis.ipynb  README.md  example.py
PythonBasis/Practice/: EncryptionProgram.py  SlotMechine.py
